--- a/www/chat.html
+++ b/www/chat.html
@@ -8,8 +8,8 @@
 		-->
 		</style>
 		<title>Sample Chat</title>
-		<script src="http://cdn.robotwebtools.org/EventEmitter2/current/eventemitter2.js"></script>
-		<script src="http://cdn.robotwebtools.org/roslibjs/current/roslib.js"></script>	</head>
+		<script src="https://static.robotwebtools.org/EventEmitter2/current/eventemitter2.js"></script>
+		<script src="https://static.robotwebtools.org/roslibjs/current/roslib.js"></script>	</head>
 	<body>
 		<script type="text/javascript">
 		<!--
